[package]
name = "wataxrate"
version = "1.0.0"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2018"
description = "Tool for getting tax information for addresses in WA State."
license = "NCSA"
repository = "https://github.com/rust-lang/cargo/"
keywords = ["tax", "taxes", "washington", "wa"]
readme = "README.md"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = { version = "0.10", features = ["rustls"] }
tokio = { version = "0.2", features = ["time"] }
strong-xml = "0.4.1"
log = "0.4"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "macros"] }
