[package]
name = "wataxrate"
version = "1.0.5"
authors = ["Ryan Gorup <gorup@users.noreply.github.com>"]
edition = "2024"
description = "Tool for getting tax information for addresses in WA State."
license = "NCSA"
repository = "https://github.com/gorup/wataxrate"
keywords = ["tax", "taxes", "washington", "wa"]
readme = "README.md"

[badges]
maintenance = { status = "as-is" }

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"] }
tokio = { version = "1.43", features = ["full"] }
strong-xml = "0.6.3"
log = "0.4"
url = "2.5.4"

[dev-dependencies]
tokio = { version = "1.43", features = ["macros"] }
env_logger = "0.11"
